syntax = "proto3";

package proto;

message Projectile {
  string uuid = 1;
  float x = 2;
  float y = 3;
  float dx = 4;
  float dy = 5;
  string attack_profile_name = 6;
}

message ProjectileCreated {
  Projectile projectile = 1;
}

message ProjectileDestroyed {
  string uuid = 1;
}